[package]
name = "aoc2023"
version = "0.1.0"
authors = ["Callum Ward <wards.callum@gmail.com>"]
edition = "2021"
default-run = "01"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
phf = { version = "0.11.2", features = ["macros"] }
